working viewmodel, need to fix toModel test and add toJSON method

--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "requirejs": "*",
     "underscore": "*",
-    "knockout": "*"
+    "knockout": "*",
+    "jquery": "*"
   },
   "keywords": [
     "knockout.js",
