--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,9 @@
     "knockout": "~3.0.0"
   },
   "devDependencies": {
-    "jasmine":"~1.3.0",
+    "mocha": "latest",
+    "should": "latest",
+    "requirejs": "latest"
   },
   "keywords": [
     "knockout.js",
