--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "baseviewmodel",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "BaseViewModel class for Knockout that enables Backbone like extension for viewmodels and automatic observing of model properties",
+  "homepage": "http://labs.lee-ellam.com/BaseViewModel",
   "main": "src/baseviewmodel.js",
   "scripts": {
     "test": "mocha --require should --reporter spec test/specs"
