updated paige output folder

--- a/paige.config
+++ b/paige.config
@@ -6,5 +6,6 @@
   "header": "BaseViewModel",
   "subheader": "Backbone-style Knockout viewmodels",
   "background": "diagonal-noise",
-  "github": "https://github.com/leesus/BaseViewModel"
+  "github": "https://github.com/leesus/BaseViewModel",
+  "output_folder": "./"
 }
