--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "baseviewmodel",
   "version": "0.2.1",
-  "description": "BaseViewModel class for Knockout that enables Backbone like extension for viewmodels and automatic observing of model properties",
+  "description": "Backbone like model extension for knockout viewmodels, including automatic observable and computed function creation for model properties.",
   "homepage": "http://labs.lee-ellam.com/BaseViewModel",
   "main": "src/baseviewmodel.js",
   "scripts": {
